组织架构-用户信息字段调整